--- a/templates/analysts.html
+++ b/templates/analysts.html
@@ -1,19 +1,20 @@
 {% include "_header.html" %}
   <div id="main__body" class="main__body container-fluid home">
     <div class="row">
-      <div class="col-lg-11">
+      <div class="col-lg-8">
 
-        <h1>Analysts and researchers</h1>
+        <h1>Government analysts and policymakers</h1>
         <p>
           The land and property platform can help and support you with your 
-          analysis and research so that you reach effective conclusions.
-        </p>
-        <p>
-          There are two key ways to use the platform for analysis or research:
+          analysis and research with access to land and property data. You can:
         </p>
         <ul>
-          <li>Access and download data through the secure API</li>
-          <li>Request direct analytical support</li>
+          <li>
+            Access and download data through the secure API using your existing data science and analytical tools
+          </li>
+          <li>
+            <a href="mailto:dataproject@wra.gov.wales">Request advice</a> on how the data might support the modelling of new policy interventions and monitor if their intent is being met.
+          </li>
         </ul>
       </div>
     </div>
