--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -8,13 +8,16 @@
           The land and property data platform is for service delivery teams and 
           data analysts at the Welsh Revenue Authority and wider public sector in Wales. Some information, such as tax zones, is available as open data and can be used by anyone.
         </p>
-        <h2>Try the API now</h2>
+        <h2>Try the API</h2>
         <p>
           You don't need to create an account to get started with our API. However, you will be asked to create an account to access some datasets where licensing restrictions apply.
           For some closed datasets, there will be additional verification steps for your account.
           Without an account, the API will return synthetic sample data, so you can still try it out.
         </p>
-        <p><a href="/api-docs">Start exploring the API now</a></p>
+        <p><a href="/docs">Use the API explorer</a></p>
+        <p><a href="https://welsh-revenue-authority.github.io/property_platform_app/">Read the documentation</a></p>
+        <h2>Code libraries</h2>
+        <p>We are developing code libraries in Python, C# and Java.</p>
         <h2>Pricing</h2>
         <p>
           The land and property platform is <strong>free</strong> to use unless you:
@@ -30,6 +33,7 @@
         <h2>Who's using the platform?</h2>
         <ul>
           <li>The Welsh Revenue Authority</li>
+          <li><a href="https://www.isitin.wales">Is it in Wales?</a></li>
         </ul>
       </div>
     </div>
