--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -19,12 +19,14 @@
         <h2>In progress</h2>
         <ul>
           <li>List of tax zones</li>
+          <li>Python code library</li>
         </ul>
 
         <h2>Backlog</h2>
         <ul>
           <li>Price sold data</li>
           <li>Energy perfomance data</li>
+          <li>C# code library</li>
         </ul>
       </div>
     </div>
