--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             Explore the data that can be accessed via the platform, which organisations are custodians of different datasets. Understand how access to open, closed and shared data is controlled securely.
           </p>
           <p>
-            <a href="/data">Explore the data</a>
+            <a href="#">Explore the data</a>
           </p>
         </div>
         <div class="col-lg-6">
