--- a/templates/features.html
+++ b/templates/features.html
@@ -18,6 +18,8 @@
           <dd>Quickly implement a postcode and address lookup for your service</dd>
           <dt>Tax zones</dt>
           <dd>Check which Land Transaction Tax rules apply in different parts of Wales or to specific properties</dd>
+          <dt>Calculate local taxes</dt>
+          <dd>Check the local taxes for a property</dd>
           <dt>Extended property information</dt>
           <dd>Check if a property has registered for the tourism levy or contains a listed building</dd>
           <dt>Link to other datasets</dt>
